--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -15,6 +15,9 @@ main, footer {
 main title {
     text-align: center;
 }
+main button.btn {
+    margin: 12px;
+}
 main .photo {
     float: left;
     margin: 0 20px 20px 0;
